# llios

./: .gitignore  .gitmodules  README.md
apple_open_source/: README.md  download.sh
articles/: BuildSwiftMacros.md  CodeCoverage.md  CodeCoverageOnTestCrash.md  MixedModuleCompiling.md  ModuleMap.md  SwiftGenObjcHeader.md  SwiftModule.md  SwiftSourceInfo.md  SwiftUIPreview.md  (+3 more)
macho_parser/: .bazelrc  .gitignore  BUILD.bazel  LC_CODE_SIGNATURE.md  MODULE.bazel  README.md  WORKSPACE.bazel  argument.c  argument.h  build.sh  build_sample.sh  build_version.c  build_version.h  dyld_info.c  dysymtab.c  dysymtab.h  linkedit_data.h  main.c  segment_64.c  segment_64.h  symtab.c  util.c  util.h
macho_parser/docs/: LC_BUILD_VERSION.md  LC_CODE_SIGNATURE.md  LC_DYLD_ENVIRONMENT.md  LC_DYLD_INFO.md  LC_DYSYMTAB.md  LC_ENCRYPTION_INFO.md  LC_FUNCTION_STARTS.md  LC_LINKER_OPTION.md  LC_MAIN.md  LC_SEGMENT_64.md  LC_SYMTAB.md  LC_dylib.md
macho_parser/mach-o/: loader.h  nlist.h
macho_parser/openssl/: README.md  openssl_repositories.bzl
macho_parser/sample/: build.sh  main.c  my_dylib.c  objc.m  sample.c
macho_parser/sources/: ar_parser.cpp  ar_parser.h  argument.c  argument.cpp  argument.h  build_version.c  build_version.cpp  build_version.h  chained_fixups.c  chained_fixups.cpp  chained_fixups.h  code_signature.c  code_signature.cpp  code_signature.h  dyld_info.c  dyld_info.cpp  dyld_info.h  dylib.c  dylib.cpp  dylib.h  dysymtab.c  dysymtab.cpp  dysymtab.h  encryption_info.cpp  encryption_info.h  exports_trie.cpp  exports_trie.h  linkedit_data.c  linkedit_data.cpp  linkedit_data.h  llvm_cov.cpp  llvm_cov.h  load_command.c  load_command.cpp  load_command.h  macho_binary.h  macho_header.c  macho_header.cpp  macho_header.h  main.c  (+11 more)
macho_parser/sources/utils/: compression.cpp  compression.h  formatting.cpp  hexdump.cpp  leb128.cpp  utils.h
macho_parser/tests/: formatting.cpp  leb128.cpp
macho_parser/tests/fixtures/code_signature/: build_fixtures.sh  main.swift  main_sha1  main_sha256
(+223 files in other folders)
