cc_binary(
    name = "macho_parser",
    srcs = glob([
        "sources/*.c",
        "sources/*.cpp",
        "sources/*.h",
    ]),
    includes = [
        "sources",
    ],
    linkopts = [
        "-lz",
        "-framework",
        "CoreFoundation",
        "-framework",
        "Security",
    ],
    defines = ["OPENSSL"],
    deps = [
        ":utils",
        "@openssl//:openssl",
    ]
)

cc_library(
    name = "utils",
    srcs = glob([
        "sources/utils/*.cpp",
        "sources/utils/*.h",
    ]),
    hdrs =["sources/utils/utils.h"],
)

cc_test(
    name = "unit_tests",
    srcs = glob([
        "tests/*.cpp",
    ]),
    includes = [
        "sources",
    ],
    deps = [
        "@com_google_googletest//:gtest_main",
        ":utils",
    ]
)
